--- a/requirements.txt
+++ b/requirements.txt
@@ -1,79 +1,98 @@
-absl-py==2.1.0
-asgiref==3.8.1
-asttokens==2.4.1
+# Core ML/DL Libraries
+tensorflow==2.13.0  # Downgraded for better compatibility
+keras==2.13.1  # Matching TensorFlow version
+numpy==1.24.3
+scipy==1.11.3
+scikit-learn==1.3.2
+scikit-image==0.21.0
+segmentation-models==1.0.1
+efficientnet==1.0.0  # Downgraded to match segmentation-models requirements
+
+# Deep Learning Support Libraries
+absl-py==2.0.0
 astunparse==1.6.3
-certifi==2024.8.30
-charset-normalizer==3.4.0
-comm==0.2.2
-contourpy==1.3.0
-cycler==0.12.1
-debugpy==1.8.7
-decorator==5.1.1
-Django==5.1.3
-executing==2.1.0
-flatbuffers==24.3.25
-fonttools==4.54.1
-gast==0.6.0
+flatbuffers==23.5.26
+gast>=0.2.1,<=0.4.0
 google-pasta==0.2.0
-grpcio==1.67.1
-h5py==3.12.1
-idna==3.10
+grpcio==1.59.3
+h5py==3.10.0
+keras-applications==1.0.8
+ml-dtypes==0.2.0
+opt-einsum==3.3.0
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+protobuf>=3.20.3,<4.24.0
+wrapt>=1.11.0,<1.15.0
+typing-extensions>=3.6.6,<4.6.0
+
+# Image Processing
+pillow==10.1.0
+opencv-python==4.8.1.78
+imageio==2.31.5
 image==1.5.33
-ipykernel==6.29.5
-ipython==8.29.0
-jedi==0.19.1
-joblib==1.4.2
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-keras==3.6.0
-kiwisolver==1.4.7
-libclang==18.1.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-ml-dtypes==0.4.1
-namex==0.0.8
-nest-asyncio==1.6.0
-numpy==1.26.4
-opencv-python==4.10.0.84
-opt_einsum==3.4.0
-optree==0.13.0
-packaging==24.1
-parso==0.8.4
+image-classifiers==1.0.0
 patchify==0.2.3
-pexpect==4.9.0
-pillow==11.0.0
-platformdirs==4.3.6
-prompt_toolkit==3.0.48
-protobuf==5.28.3
-psutil==6.1.0
+
+# Web Framework
+Django==4.2.7
+asgiref==3.7.2
+sqlparse==0.4.4
+
+# Python Development Tools
+ipykernel==6.27.1
+ipython==8.17.2
+jupyter_client==8.6.0
+jupyter_core==5.5.0
+debugpy==1.8.0
+jedi==0.19.1
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+networkx==3.2.1
+
+# Utility Libraries
+certifi==2023.11.17
+charset-normalizer==3.3.2
+comm==0.1.4
+contourpy==1.2.0
+cycler==0.12.1
+decorator==5.1.1
+executing==2.0.1
+fonttools==4.44.3
+idna==3.4
+joblib==1.3.2
+kiwisolver==1.4.5
+lazy_loader==0.3
+libclang==16.0.6
+Markdown==3.5.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+mdurl==0.1.2
+namex==0.0.8
+nest-asyncio==1.5.8
+optree==0.9.1
+packaging==23.2
+parso==0.8.3
+pexpect==4.8.0
+platformdirs==4.0.0
+prompt_toolkit==3.0.41
+psutil==5.9.6
 ptyprocess==0.7.0
-pure_eval==0.2.3
-Pygments==2.18.0
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
-pyzmq==26.2.0
-requests==2.32.3
-rich==13.9.4
-scikit-learn==1.5.2
-scipy==1.14.1
-setuptools==75.3.0
+pure_eval==0.2.2
+Pygments==2.17.2
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pyzmq==25.1.1
+requests==2.31.0
+rich==13.7.0
 six==1.16.0
-sqlparse==0.5.1
 stack-data==0.6.3
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-termcolor==2.5.0
-threadpoolctl==3.5.0
-tornado==6.4.1
-traitlets==5.14.3
-typing_extensions==4.12.2
-urllib3==2.2.3
-wcwidth==0.2.13
-Werkzeug==3.1.3
-wheel==0.45.0
-wrapt==1.16.0
+termcolor==2.3.0
+threadpoolctl==3.2.0
+tifffile==2023.9.26
+tornado==6.3.3
+traitlets==5.13.0
+urllib3==2.1.0
+wcwidth==0.2.10
+Werkzeug==3.0.1
+wheel==0.41.3
+setuptools>=65.5.1
